package com.inicio.aprendizaje;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class AprendizajeApplication {

	public static void main(String[] args) {
		SpringApplication.run(AprendizajeApplication.class, args);
	}

}
