package com.inicio.aprendizaje.Ejemplo;

public class AnimalRun {
    public static void  main(String[] args) {
        Animal animal =new Animal("invertebrate","omnivore","salvage");
        LandAnimal landAnimal=new LandAnimal("vertebrate","carnivore","Domestic",100);
    }
}
