package com.inicio.aprendizaje.Tipos;

import java.util.Arrays;

public class TipoPropio {
    String chararray;

    public TipoPropio(char[] chararray) {
        this.chararray = Arrays.toString(chararray);
    }
}
